--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #e7510b;
     color: #fff;
     text-align: center;
     padding: 20px;
