--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -2,14 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
-}
+    background-image: url('background.jpg'); /* Adicione sua imagem de fundo desejada */
+    background-size: cover;
+    }
 
 header {
-    background-color: #e7510b;
+    background-color: 0;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 0;
 }
 
 main {
@@ -60,4 +61,35 @@ h1 {
 
 #checkout {
     margin-top: 10px;
+}
+
+nav {
+    background-color: rgba(0, 0, 0, 0.0); /* Use rgba para uma cor de fundo transparente */
+    padding: 20px;}
+
+
+ul {
+    list-style-type: none;
+    margin: 2px;
+    padding: 2px;
+    overflow: hidden;
+    background-color:rgba(0, 0, 0, 0.0);
+}
+
+li {
+    
+    float: right;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Altera a cor do link para #111 (preto) quando passa o mouse sobre ele */
+li a:hover {
+    background-color: #12ac1f;
 }
