--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('background.jpg'); /* Adicione sua imagem de fundo desejada */
+    background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1)); /* Adicione sua imagem de fundo desejada */
     background-size: cover;
     }
 
