--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -13,6 +13,13 @@ header {
     padding: 0;
 }
 
+.container img {
+    max-width:200px;
+    max-height:150px;
+    width: auto;
+    height: auto;
+}
+
 main {
     max-width: 800px;
     margin: 0 auto;
