--- a/assets/CSS/componets/footer.css
+++ b/assets/CSS/componets/footer.css
@@ -14,7 +14,7 @@ footer {
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #c2c2c2;
-  color: #fff;
+  color: var(--color-primary);
 }
 
 .footerLinks section a {
