--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -1,3 +1,6 @@
+@import url('../global.css');
+@import url('../reset.css');
+
 .navegation {
   display: flex;
   justify-content: space-evenly;
@@ -16,14 +19,9 @@ ul {
 
 nav ul li a {
   text-decoration: none;
-  color: #fff;
+  color: var(--color-primary);
 }
 
 ul li a {
   opacity: 1;  
-}
-
-ul li a:hover {
-  font-weight: bold;
-  opacity: 0.5;
 }
