--- a/assets/CSS/global.css
+++ b/assets/CSS/global.css
@@ -3,7 +3,11 @@
 :root {
   font-size: 62.5%;
   --bg-img: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1));
-  --color-primaria: #fff;
+  --color-primary: #ffffffff;
+  --color-primary: #e98080;
+  --color-text:#551313;
+  --color-bt: #d80f0f;
+  
 }
 
 body {
