--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,11 +3,13 @@
 @import url('./componets/header.css');
 @import url('./componets/footer.css');
 @import url('./componets/blog.css');
+@import url('./componets/depoimentos.css');
 
 body {
     background-image: var(--bg-img); /* Adicione sua imagem de fundo desejada */
     background-size: cover;
 }
+
 main {
     max-width: 80rem;
     margin: 0 auto;
@@ -22,17 +24,11 @@ section {
    
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-body {
-    margin: 2rem;
-}
-
 h1 {
+    font-size: 3em;
+    font-weight: 700;
+    line-height: 1.6rem;
+    margin: 2rem;
     text-align: center;
 }
 
