--- a/assets/CSS/componets/blog.css
+++ b/assets/CSS/componets/blog.css
@@ -1,13 +1,3 @@
-@import url('../global.css');
-@import url('../reset.css');
-
-h1 {
-  font-size: 3em;
-  font-weight: 700;
-  line-height: 1.6rem;
-  margin: 2rem;
-}
-
 .blogPost {
   display: flex;
   justify-content: center;
@@ -19,7 +9,7 @@ h1 {
 
 .blogPost h2 {
   font-size: 2rem;
-  color: var(--color-text);
+  color: var(--color-sub);
   text-align: center;
   line-height: 1.6rem;
   margin-bottom: 3rem;
@@ -29,7 +19,7 @@ h1 {
   width: 85%;
   max-width: 90ch;  
   font-size: 1.4rem;
-  color: var(--color-text);
+  color: var(--color-p);
 }
 
 .button {
