--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -1,6 +1,3 @@
-@import url('../global.css');
-@import url('../reset.css');
-
 .navegation {
   display: flex;
   justify-content: space-evenly;
@@ -20,8 +17,26 @@ ul {
 nav ul li a {
   text-decoration: none;
   color: var(--color-primary);
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.4rem;
 }
 
 ul li a {
-  opacity: 1;  
+  opacity: 1;
+  transition: all .3s ease-in-out;
+}
+
+ul li a:hover {
+  transform: scale(.9) translateY(-2px);
+  opacity: 0.7;
+}
+
+li {
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
