--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,6 +4,17 @@
 @import url('./componets/footer.css');
 @import url('./componets/blog.css');
 @import url('./componets/depoimentos.css');
+@import url('./componets/contato.css');
+@import url('./componets/sobre.css');
+@import url('./componets/faleConosco.css');
+@import url('./componets/faq.css');
+@import url('./componets/galeria.css');
+@import url('./componets/horarios.css');
+@import url('./componets/incricao.css');
+@import url('./componets/membros.css');
+@import url('./componets/politica.css');
+@import url('./componets/programas.css');
+@import url('./componets/termos.css');
 
 body {
     background-image: var(--bg-img); /* Adicione sua imagem de fundo desejada */
