feito: alterado incon do twiter e linkedin

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,7 +4,7 @@
 @import url('./componets/footer.css');
 @import url('./componets/blog.css');
 @import url('./componets/depoimentos.css');
-@import url('./componets/contato.css');
+@import url('./compgitonets/contato.css');
 @import url('./componets/sobre.css');
 @import url('./componets/faleConosco.css');
 @import url('./componets/faq.css');
