--- a/assets/CSS/componets/contato.css
+++ b/assets/CSS/componets/contato.css
@@ -1,138 +1,139 @@
-.contactInfo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  padding: 3rem 0;
+.herder {
+    display: flex;
+    position: relative;
+    top: 0px;
+    left: 0px;
 }
 
-.contactInfo h2 {
-  font-size: 2rem;
-  color: var(--color-sub);
-  text-align: center;
-  line-height: 1.6rem;
-  margin-bottom: 3rem;
-}
-
-.contactInfo p a {
-  max-width: 90ch;  
-  font-size: 1.4rem;
-  color: var(--color-p);
-  cursor: pointer;
-}
-
-form {
-  border-radius:  .8rem .8rem 0 0;
-  min-height: 30rem;
-
-  padding: 3.2rem;
-
-  display: flex;
-  flex-direction: column;
-}
-
-fieldset {
-  border: none;  
-}
-
-.fieldset-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-fieldset legend {
-  color: var(--color-sub);
-  text-align: center;
-  font-weight: 700;
-  font-size: 2.4rem;
-  line-height: 3.4rem;
-
+.heder .imgMain {
   width: 100%;
-
-  border-bottom: 1px solid #E6E6E6;
-  padding-bottom: 1.6rem;
 }
 
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;  
-}
-
-.input-wrapper label, .checkbox-wrapper label  {
-  font-size: 14px;
-  line-height: 24px;
-
-  color: #4E4958;
-
-  margin-bottom: 8px;
-}
-
-.input-wrapper label span {
-  margin-left: 12px;
-
-  font-size: 12px;
-  line-height: 20px;
-
-  color: #a9a7af;
-}
-
-.input-wrapper label span:hover {
-  color: #6c6a71
-} 
-
-.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
- 
-  border: 1px solid #E6E6F0;
-  border-radius: 8px;
-
-  height: 56px;
-
-  padding: 0 24px;
-
-  font-size: 16px;
-  line-height: 26px;
-
-  color: #6c6a71;
-}
-
-.input-wrapper textarea {
-  padding: 0;
-  height: 168px;
-}
-
-.input-wrapper select {
-  appearance: none;
-
-  background-image: url("data:image/svg+xml,%3Csvg width='10' height='6' viewBox='0 0 10 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L5 5L9 1' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  background-repeat: no-repeat;
-  background-position: right 24px top 50%;
-}
-
-.checkbox-wrapper label {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  margin: 0;
-}
-
-.checkbox-wrapper {
-  position: relative;
-}
-
-.checkbox-wrapper input {
+.herder h1 {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 24px;
-  height: 24px;
-  opacity: 0;
+  top: 1rem;
+  right: 40%;
+  font-size: 3em;
+  font-weight: 700;
+  line-height: 1.6rem;
+  margin: 2rem;
+  text-align: center;
+  color: var(--color-text);
 }
 
+.contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  margin-bottom: -2rem;
+  padding: 0;
+}
+
+.contact .contactInfo h2 {
+  margin: 0;
+  margin-bottom: 1.875rem;
+  font-size: 2.4rem;
+  color: var(--color-sub);
+}
+
+
+.contactInfo {
+  padding: 4rem ;
+}
+
+.contactInfo__container {
+  float: right;
+  padding-right: 7.125rem;
+}
+
+.contactInfo span {
+  display: grid;
+  align-items: center;
+  gap:2rem;
+  font-weight: 700;
+  line-height: 1.69rem;
+  font-family: 'Roboto', sans-serif;
+}
+
+.contactInfo span:nth-of-type(1) {
+  padding: 2rem 0;
+}
+
+.contactInfo span:nth-of-type(2) {
+  padding :2rem  0;
+}
+
+.contactInfo span:nth-of-type(3) {
+  padding: 2rem 0;
+}
+
+.contactInfo span:nth-of-type(4) {
+  padding: 2rem 0;
+  line-height: 3rem;
+  font-size: 1.8rem;
+  }
+
+.contactInfo__container span i {
+  color: var(--color-icon);
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.contactInfo span, .contactForm label, .contactForm input {
+  display: block;
+}
+
+.contactInfo__container, .contactForm__container {
+  width: 50%;
+}
+
+.contactInfo h2:nth-of-type(2) {
+  margin-top: 3.75rem;  
+}
+
+.contactForm {   
+  padding-right: 4rem;
+  background-color: var(--color-p);
+  color: var(--color-text);
+}
+
+.contactForm__container {
+  width: 100%;
+  padding-left: 3rem; 
+  margin: 0;
+ 
+}
+
+.contactForm h2 {
+  margin-right: 2rem;
+  padding-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  color: var(--color-text);
+}
+
+.contactForm label {
+  font-weight: 700;
+  font-size: 1.6rem;
+  padding: 2rem 0;
+}
+
+.contactForm input {
+  width: 100%;
+  margin-bottom: 1.88rem;
+  background: unset;
+  border: unset;
+  border-bottom: 0.06rem solid #fff;
+  color: var(--color-text);
+  font-size: 1.5rem;
+}
+
+.contactForm span {
+  font-size: 1.2rem;
+}
 
 .button {
-  display: block;
+  display: flex;
   justify-content: center;
   align-items: center;
   border: none;
