--- a/assets/CSS/global.css
+++ b/assets/CSS/global.css
@@ -5,9 +5,10 @@
   --bg-img: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1));
   --color-primary: #dba0a0;
   --color-sub:#5c0707;
-  --color-p: #111010;
+  --color-p: #000;
   --color-bt: #d80f0f;
-  
+  --color-text: #fff;
+  --color-icon: #512b1f;
 }
 
 body {
