--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -32,11 +32,25 @@ ul li a:hover {
   opacity: 0.7;
 }
 
-li {
+.herder {
+  display: flex;
+  position: relative;
+  top: 0px;
+  left: 0px;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
+.heder {
+  width: 100%;
+}
+
+.herder h1 {
+  position: absolute;
+  top: 1rem;
+  right: 40%;
+  font-size: 3em;
+  font-weight: 700;
+  line-height: 1.6rem;
+  margin: 2rem;
+  text-align: center;
+  color: var(--color-text);
 }
