--- a/assets/CSS/componets/sobre.css
+++ b/assets/CSS/componets/sobre.css
@@ -1,13 +1,3 @@
-body {
-  background-image: var(--bg-img); /* Adicione sua imagem de fundo desejada */
-  background-size: cover;
-}
-.geral {
-  max-width: 80rem;
-  margin: 0 auto;
-  background-color: #fff;
-}
-
 h1 {
   font-size: 3em;
   font-weight: 700;
@@ -16,14 +6,52 @@ h1 {
   text-align: center;
 }
 
-.card {
-  margin: 1rem;
+.imgTerm {
+  width: 100%;
+  height: 50rem;
 }
 
-#cart {
-  margin-top: 2rem;
+main {
+  background-color:  #fff;
+  text-align: center;
 }
 
-#checkout {
-  margin-top: 1rem;
+ .termo h2 {
+  font-size: 2rem;
+  line-height: 1.6rem;
+  color: var(--color-sub);
+  border-bottom: 2px solid var(--color-icon);
+  padding: 3.6rem 0 1.8rem;
+  margin: 0 auto;
 }
+
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--color-icon);
+  padding-top: 2rem;
+}
+
+.aboutValue {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+}
+
+.aboutValue li {
+  display: flex;
+}
+
+.aboutValue li img {
+  max-width: 3rem;
+  min-width: 3rem;
+  margin-right: 2rem;
+  color: var(--color-sub);
+}
+.termo .ultimo {
+  padding-bottom: 2rem;
+}
+
+
+
