--- a/assets/CSS/componets/blog.css
+++ b/assets/CSS/componets/blog.css
@@ -1,34 +1,54 @@
+.imgTreino {
+  width: 100%;
+  height: 50rem;
+}
+
+main {
+  background-color:  #fff;
+} 
+
+.herder .herderTiteli {
+  display: block;
+  font-size: 4rem;
+  top: 3rem;;
+}
+
 .blogPost {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  padding: 3rem 0;
+  padding-left: 2rem;
 }
 
 .blogPost h2 {
   font-size: 2rem;
-  color: var(--color-sub);
-  text-align: center;
   line-height: 1.6rem;
-  margin-bottom: 3rem;
+  color: var(--color-sub);
+  border-bottom: 2px solid var(--color-icon);
+  padding: 3.6rem 0 1.8rem;
+  margin: 0 auto;
 }
 
+.blogPost-pg {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--color-p);
+  padding: 2rem 0 2rem;
+  text-align: justify;
+}
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
   border: none;
-  padding: 16px 32px;
+  padding: 1.6rem 3.2rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: .4rem .2rem;
   border-radius: 2rem;
   transition-duration: 0.4s;
   cursor: pointer;
   background-color: var(--color-bt);
+  padding-bottom: 2rem;
 }
 
 .button a {
