--- a/assets/CSS/componets/faq.css
+++ b/assets/CSS/componets/faq.css
@@ -1,13 +1,5 @@
-body {
-  background-image: var(--bg-img); /* Adicione sua imagem de fundo desejada */
-  background-size: cover;
-}
-.geral {
-  max-width: 80rem;
-  margin: 0 auto;
-  background-color: #fff;
-}
-h1 {
+.herder .herderFAQ {
+  color: var(--color-p);
   font-size: 3em;
   font-weight: 700;
   line-height: 1.6rem;
@@ -15,14 +7,32 @@ h1 {
   text-align: center;
 }
 
-.card {
-  margin: 1rem;
+.imgTerm {
+  width: 100%;
+  height: 50rem;
 }
 
-#cart {
-  margin-top: 2rem;
+main {
+  background-color:  #fff;
 }
 
-#checkout {
-  margin-top: 1rem;
+ .faq h2 {
+  font-size: 2rem;
+  line-height: 1.6rem;
+  color: var(--color-sub);
+  border-bottom: 2px solid var(--color-icon);
+  padding: 3.6rem 0 1.8rem;
+  margin: 0 auto;
+}
+
+
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--color-icon);
+  padding-top: 2rem;
+}
+
+.faq-pg {
+  padding-bottom: 2rem;
 }
