--- a/assets/CSS/componets/footer.css
+++ b/assets/CSS/componets/footer.css
@@ -101,7 +101,7 @@ footer {
   line-height: 1.6rem;
 }
 
-.footerDisclaimer p {
+.footerDisclaimer .footerDisclaimer-pg {
   text-align: center;
   display: flex;
   justify-content: center;
@@ -109,6 +109,7 @@ footer {
   margin-block-end: 1rem;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  color: var(--color-primary);
 }
 
 .footerDisclaimer p a {
