--- a/assets/CSS/componets/faq.css
+++ b/assets/CSS/componets/faq.css
@@ -1,36 +1,9 @@
-.herder .herderFAQ {
-  color: var(--color-p);
-  font-size: 3em;
-  font-weight: 700;
-  line-height: 1.6rem;
-  margin: 2rem;
-  text-align: center;
-}
-
-.imgTerm {
+.imgFAQ {
   width: 100%;
   height: 50rem;
-}
 
-main {
-  background-color:  #fff;
-}
-
- .faq h2 {
-  font-size: 2rem;
-  line-height: 1.6rem;
-  color: var(--color-sub);
-  border-bottom: 2px solid var(--color-icon);
-  padding: 3.6rem 0 1.8rem;
-  margin: 0 auto;
-}
-
-
-p {
-  font-size: 1.6rem;
-  line-height: 1.5;
-  color: var(--color-icon);
-  padding-top: 2rem;
+}.herder .herderFAQ {
+  color: var(--color-p);
 }
 
 .faq-pg {
