--- a/assets/CSS/componets/footer.css
+++ b/assets/CSS/componets/footer.css
@@ -7,9 +7,9 @@ footer {
 }
 
 .footer section {
-  min-width: 120rem;
+  min-width: 100%;
   margin: 0 auto;
-  padding: 3rem 0 ;
+  padding: 1rem;
   
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@ footer {
 .footerLogo {
   display: block;
   margin: 0 auto; 
-   width: 40rem; 
+  width: 40rem; 
 }
 
 .footerLogo img {
@@ -36,7 +36,7 @@ footer {
 
 .footerTitler {
   margin: 0 0 2.5rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 2.4rem;
 }
 
@@ -73,11 +73,15 @@ footer {
   display: flex;
   flex-direction: row;
   grid-gap: 5rem;
-  gap: 10rem;
+  gap: 2rem;
 }
 
 .footerLink div {
-    margin-left: 2rem;
+    margin-left: 0;
+}
+
+.footerLink .footerLinkPage h2 {
+  font-size: 1.8rem; 
 }
 
 .footerLink .footerLinkPage ul  {
@@ -88,7 +92,7 @@ footer {
 .footerLink .footerLinkPage ul li a {
   text-decoration: none;
   font-size: 1.4rem;
-  line-height: 1.7rem;
+  line-height: 1.6rem;
   color: inherit;
 }
 
@@ -97,16 +101,16 @@ footer {
 }
 
 .footerDisclaimer  {
-  font-size: 1.4rem;
-  line-height: 1.6rem;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
 }
 
 .footerDisclaimer .footerDisclaimer-pg {
   text-align: center;
   display: flex;
   justify-content: center;
-  margin-block-start: 1rem;
-  margin-block-end: 1rem;
+  margin-block-start: 0.5rem;
+  margin-block-end: 0.5rem;
   margin-inline-start: 0;
   margin-inline-end: 0;
   color: var(--color-primary);
