--- a/assets/CSS/componets/termos.css
+++ b/assets/CSS/componets/termos.css
@@ -1,32 +1,15 @@
-
 .imgTerm {
-  width: 100%;
   height: 50rem;
 }
-
-main {
-  background-color:  #fff;
-  text-align: center;
-}
-
-.about h2 {
-  font-size: 2rem;
-  line-height: 1.6rem;
-  color: var(--color-sub);
-  border-bottom: 2px solid var(--color-icon);
-  padding: 3.6rem 0 1.8rem;
-  margin: 0 auto;
-}
-
-p {
-  font-size: 1.6rem;
-  line-height: 1.5;
-  color: var(--color-p);
-  padding-top: 2rem;
-}
-
 .termo .ultimo {
   padding-bottom: 2rem;
+}
+
+/* Media query for 375px screens */
+@media (max-width: 375px) {
+  .termo .ultimo {
+    padding-bottom: 1.6rem;
+  }
 }
 
 
