--- a/assets/CSS/componets/base.css
+++ b/assets/CSS/componets/base.css
@@ -37,7 +37,7 @@ h2 {
   font-size: 2rem;
   line-height: 1.6rem;
   color: var(--color-sub);
-  border-bottom: 2px solid var(--color-icon);
+  border-bottom: .2rem solid var(--color-icon);
   padding: 3.6rem 0 1.8rem;
   margin: 0 auto;
 }
