--- a/assets/CSS/componets/blog.css
+++ b/assets/CSS/componets/blog.css
@@ -1,12 +1,11 @@
-.imgTreino {
+.imgTraining {
   width: 100%;
-  height: 50rem;
 }
 
-.herder .herderTiteli {
+.herder .herderTraining {
   display: block;
   font-size: 4rem;
-  top: 3rem;;
+  top: 3rem;
 }
 
 .blogPost {
@@ -52,4 +51,25 @@
 
 .button a:hover {
   color: black;
+}
+
+/* Media query for 768px screens */
+@media (max-width: 768px) {
+  .herder .herderTraining {   
+    font-size: 2rem;
+    top: 1rem;
+  }
+}
+
+
+/* Media query for 375px screens */
+@media (max-width: 375px) {
+  .header .herderTraining {
+    font-size: 1.5rem;
+    top: 1rem;
+    line-height: 4rem;
+  }
+  .imgTraining {
+    height: auto;
+  }
 }
