--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -17,3 +17,4 @@
 @import url('./componets/programas.css');
 @import url('./componets/termos.css');
 @import url('./componets/areaMembros.css');
+@import url('./componets/inscricao.css');
