feito a pagina de loginho

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -18,3 +18,4 @@
 @import url('./componets/termos.css');
 @import url('./componets/areaMembros.css');
 @import url('./componets/inscricao.css');
+@import url('./componets/loginMembros.css');
