--- a/assets/CSS/reset.css
+++ b/assets/CSS/reset.css
@@ -12,4 +12,12 @@ h2, h3, h4, h5 {
   font-weight: inherit;
 }
 
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
 
