--- a/assets/CSS/componets/@mediaQuery.css
+++ b/assets/CSS/componets/@mediaQuery.css
@@ -11,6 +11,9 @@
 
 /* Media query for 768px screens */
 @media (max-width: 768px) {
+  .overlay {
+    display: none;
+  }
   .overlay .linkPrimarary, .overlay .linkSecundary .search-box, .overlay .linkSecundary .linkSecundary-button {
     display: none;
   }
