--- a/assets/CSS/componets/blog.css
+++ b/assets/CSS/componets/blog.css
@@ -1,5 +1,8 @@
 .imgTraining {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .herder .herderTraining {
@@ -9,15 +12,18 @@
 }
 
 .blogPost {
-  padding: 0 6rem;
+  padding: 3rem;
+}
+
+.blogPost h2 {
+  font-size: 3rem;
 }
 
 .blogPost-pg {
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 1.5;
   color: var(--color-p);
-  padding: 2rem 0 2rem;
-  text-align: justify;
+  text-align: center;;
 }
 .button {
   display: flex;
@@ -56,32 +62,46 @@
 /* Media query for 768px screens */
 @media (max-width: 768px) {
   .herder .herderTraining {   
-    font-size: 2rem;
+    font-size: 4rem;
     top: 1rem;
+    line-height: 5rem;
   }
 
   .blogPost {
     padding: 0 2rem;
+  }
+
+  .blogPost h2 {
+    font-size: 3rem;
+    line-height: 3rem;
   }
 }
 
 
 /* Media query for 375px screens */
 @media (max-width: 375px) {
-  .header .herderTraining {
-    font-size: 1.5rem;
+  .herder .herderTraining {
+    font-size: 1.1rem;
     top: 1rem;
-    line-height: 4rem;
+    line-height: 2.5rem;
   }
   .imgTraining {
     height: auto;
-  }
-
-  .blogPost-pg {
-    padding-right: 1rem ;
-  }
-
+  } 
+    
   .blogPost {
     padding: 0 1rem;
   }
+
+  .blogPost h2 {
+    font-size: 1.9rem;
+    line-height: 2rem;
+  }
+
+  .blogPost-pg {
+    font-size: 1.6rem;
+    padding-right: 1rem ;
+  }
+
+ 
 }
