--- a/assets/CSS/componets/contato.css
+++ b/assets/CSS/componets/contato.css
@@ -1,5 +1,8 @@
 .herder .imgContact {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .contact {
@@ -146,11 +149,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .herder .herderTraining {   
-    font-size: 2rem;
-    top: 2rem;
-  }
-
   .contact {
     grid-template-columns: 1fr; /* Adjust the layout to a single column */
     margin-bottom: -1rem; /* Modify negative margin if needed */
