--- a/assets/CSS/componets/depoimentos.css
+++ b/assets/CSS/componets/depoimentos.css
@@ -1,5 +1,12 @@
+.herder .herderTraining {
+  color: var(--color-p);
+}
+
 .imgTestimony {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .testimony{
@@ -11,16 +18,38 @@
   flex-direction: column;
 }
 
+.testimony h2 {
+  font-size: 3rem;
+}
+
 .testimony p {
   width: 85%;
   max-width: 90ch;  
   font-size: 1.4rem;
-  color: var(--color-p)
+  color: var(--color-p);
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .herder {
+    padding-top: 2rem;
+  }
+
+  .herder .herderTraining {
+
+  }
 }
 
 /* Media query for 375px screens */
 @media (max-width: 375px) {
   .imgTestimony {
     height: auto;
+  }
+
+  .herder {
+    padding-top: -3rem;
+  }
+  .herder .herderTraining {
+    font-size: 2rem;
   }
 }
