--- a/assets/CSS/componets/header.css
+++ b/assets/CSS/componets/header.css
@@ -1,5 +1,7 @@
 /*linkis primarios*/
-
+.overlay {
+  z-index: 1;
+}
 .linkPrimarary {
   display: flex;
   justify-content: space-between;
@@ -108,7 +110,7 @@
   display: flex; 
   align-items: center;
   justify-content: space-around;
-  min-width: 20rem;
+  width: 40rem;
 }
 
 .linkSecundary-button-menu {
@@ -121,6 +123,7 @@
 .linkSecundary-button-menu h3 {
   font-weight: 700;
   font-size: 1.8rem;
+  line-height: 1.8rem;
   color: #fff;
   font-style: italic;
   text-overflow: ellipsis;
@@ -134,12 +137,14 @@
   justify-content: space-around;
   align-items: center;
   cursor: pointer;
+  padding-top: 2rem;
+  color: var(--color-text);
 }
 
 .linkSecundary-button-login a {
   text-decoration: nome;
-  font-size: 1.5rem;
-  color: #000;
+  font-size: 1.7rem;
+  color: var(--color-primary);
   cursor: pointer;
 }
 
