feito: nova pagina do mercado

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -24,3 +24,4 @@
 @import url('./componets/areaMembros.css');
 @import url('./componets/inscricao.css');
 @import url('./componets/loginMembros.css');
+@import url('./componets/carrinhoDeCompra.css');
