--- a/assets/CSS/componets/carrinho.css
+++ b/assets/CSS/componets/carrinho.css
@@ -7,7 +7,6 @@
 
 .layont__container::after {
   position: absolute;
-  z-index: 1;
   left: 66%;
   right: -100%;
   top: 0;
@@ -234,7 +233,6 @@
 
 .sidebar {
   position: relative;
-  z-index: 2;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
@@ -245,7 +243,6 @@
 
 .sidebar {
   position: relative;
-  z-index: 2;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
@@ -254,26 +251,10 @@
   background-color: #f2f2ef;
 }
 
-.sidebar__btn-close {
-  display: none;
-  position: absolute;
-  right: 1.6rem;
-  top: 1.6rem;
-  z-index: 5; 
-  width: 2.5rem;
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-}
 
 .sidebar__sumary {
   margin-top: 4rem;
   margin-bottom: 3rem;
-}
-
-.sidebar>* {
-  position: relative;
-  z-index: 3;
 }
 
 .sidebar__sub {
@@ -281,3 +262,81 @@
   line-height: 1.8;
 }
 
+/* Media query for 768px screens */
+@media (max-width: 768px) {
+  .container__plans {
+    display: block;    
+    padding-bottom: 2rem;
+  }
+
+  .plans {
+    width: 100%;
+  }
+
+  .plans__title {
+    font-size: 3rem;
+  }
+
+  .plan-card-a__footer {
+    padding-left: 2rem;
+  }
+
+  .sidebar {
+    width: 89%;
+    padding-right: 4rem;
+  }
+}
+
+/* Media query for 375px screens */
+@media (max-width: 375px) {
+  .container__plans {
+    padding: 0;
+  } 
+
+  .plan-card-a {
+    width: 89%;
+  }
+
+  .plans__title {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+
+  .plan-card-a__col--desktop {
+    display: none;
+  }
+
+  .plan-card-a__col h3 {
+    font-size: 1.3rem;
+  }
+
+  .plan-card-a__col p {
+    font-size: 2rem;
+  }
+
+  .plan-card-a__footer {
+    align-items: center;
+    padding-left: 0;
+    gap: 1.5rem;
+  }
+
+  .plan-card-a__footer .plan-card-a__description {
+    font-size: 1.2rem;
+  }
+
+  .btn {
+    font-size: 1rem;
+  }
+
+  .addons-list {
+    width: 100%;
+  }
+
+  .addons-list .headline {
+    font-size: 2.5rem;
+  }
+
+  .addons-card__description .plan-card-a__description {
+    font-size: 1.5rem;
+  }
+}
