--- a/assets/CSS/componets/loginMembros.css
+++ b/assets/CSS/componets/loginMembros.css
@@ -38,7 +38,6 @@
   top: 0;
   width: 50%;
   height: 100%;
-  padding: 2.5rem;
   background-color: #862c10;
   transition: 1.25s;
 }
@@ -119,7 +118,7 @@
   letter-spacing: 1.15px;
   background-color: var(--color-bt);
   color: var(--color-text);
-  box-shadow: .8rem .8rem 1.6rem #d1d9e6, -.8rem -.8rem 1.6rem #f9f9f9;
+  box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
   border: none;
   outline: none;
 }
@@ -136,11 +135,11 @@
 /**/
 .a-container {
   z-index: 100;
-  left: calc(100% - 60rem );
+  left: calc(100% - 800px );
 }
 
 .b-container {
-  left: calc(100% - 60rem);
+  left: calc(100% - 600px );
   z-index: 0;
 }
 
@@ -158,7 +157,7 @@
   transition: 1.25s;
   background-color: #ecf0f3;
   overflow: hidden;
-  box-shadow: .4rem .4rem 1rem #d1d9e6, -.4rem -.4rem 1rem #f9f9f9;
+  box-shadow: 4px 4px 10px #d1d9e6, -4px -4px 10px #f9f9f9;
 }
 .switch__circle {
   position: absolute;
@@ -207,7 +206,7 @@
 }
 
 .is-txr {
-  left: calc(100% - 60rem );
+  left: calc(100% - 800px );
   transition: 1.1s;
   transform-origin: left;
 }
