Fix: centralizacao form inscricao

--- a/assets/CSS/componets/inscricao.css
+++ b/assets/CSS/componets/inscricao.css
@@ -1,6 +1,6 @@
 
 .formLogin {
-  display: flex;
+  display: -webkit-inline-flex;
   flex-direction: column;
   background-color: #fff;
   border-radius: 7px;
