--- a/assets/CSS/componets/loginMembros.css
+++ b/assets/CSS/componets/loginMembros.css
@@ -1,15 +1,16 @@
+
 .main {
   position: relative;
-  width: 100%;
-  min-width: 100rem;
-  min-height: 60rem;
+  align-items: center;
+  width: 96%;
   height: 60rem;
-  background-color: #dba0a0;
-  box-shadow: 1rem 1rem 1rem #dba0a0, -1rem -1rem 1rem #dba0a0;
-  border-radius: 12px;
+  margin: 2rem;
+  background-color: var(--color-primary);
+  box-shadow: 10px 10px 10px var(--color-sub), -10px -10px 10px var(--color-sub);
+  border-radius: 2rem;
   overflow: hidden;
 }
-@media (max-width: 1200px) {
+/*@media (max-width: 1200px) {
   .main {
     transform: scale(0.7);
   }
@@ -28,7 +29,7 @@
   .main {
     transform: scale(0.4);
   }
-}
+}*/
 
 .container {
   display: flex;
@@ -36,9 +37,10 @@
   align-items: center;
   position: absolute;
   top: 0;
-  width: 50%;
+  width: 60rem;
   height: 100%;
-  background-color: #862c10;
+  padding: 2.5rem;
+  background-color: var(--color-primary);
   transition: 1.25s;
 }
 
@@ -53,10 +55,10 @@
 .form__icon {
   object-fit: contain;
   width: 3rem;
-  margin: 0 .5rem;
+  padding-top: 2rem;
+  margin: 0 5px;
   opacity: 0.5;
   transition: 0.15s;
-  padding-top: 1rem;
 }
 .form__icon:hover {
   opacity: 1;
@@ -66,7 +68,7 @@
 .form__input {
   width: 35rem;
   height: 4rem;
-  margin: .4rem 0;
+  margin: 4px 0;
   padding-left: 2.5rem;
   font-size: 1.3rem;
   letter-spacing: 0.15px;
@@ -75,30 +77,27 @@
   background-color: #ecf0f3;
   transition: 0.25s ease;
   border-radius: 8px;
-  box-shadow: inset .2rem .2rem .4rem #d1d9e6, inset -.2rem -.2rem .4rem #f9f9f9;
+  box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9;
 }
 .form__input:focus {
-  box-shadow: inset .4rem .4rem .4rem #d1d9e6, inset -.4rem -.4rem .4rem #f9f9f9;
+  box-shadow: inset 4px 4px 4px #d1d9e6, inset -4px -4px 4px #f9f9f9;
 }
 .form__span {
-  color: #7a8b97;
-  font-size: 1.6rem;
   margin-top: 3rem;
   margin-bottom: 1.2rem;
 }
 .form__link {
-  color: var(--color-primary);
-  font-size: 4rem;
-  margin-top: 2.5rem;
-  border-bottom: .1rem solid #a0a5a8;
+  color: #181818;
+  font-size: 15px;
+  margin-top: 25px;
   line-height: 2;
 }
 
 .title {
-  font-size: 3.2rem;
+  font-size: 34px;
   font-weight: 700;
   line-height: 3;
-  color: var(--color-primary);
+  color: #181818;
 }
 
 .description {
@@ -109,33 +108,28 @@
 }
 
 .button {
-  width: 25rem;
+  width: 20rem;
   height: 5rem;
   border-radius: 2.5rem;
   margin-top: 5rem;
   font-weight: 700;
   font-size: 1.4rem;
   letter-spacing: 1.15px;
-  background-color: var(--color-bt);
-  color: var(--color-text);
+  color: #f9f9f9;
   box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
   border: none;
   outline: none;
 }
 
 .button:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-  transition: all 0.3s ease-in-out;
-  background-color: var(--color-text);
+  box-shadow: 8px 8px 16px var(--color-bt), -8px -8px 16px var(--color-bt);
   color: var(--color-p);
-
 }
 
 /**/
 .a-container {
   z-index: 100;
-  left: calc(100% - 800px );
+  left: calc(100% - 600px );
 }
 
 .b-container {
@@ -151,8 +145,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 50%;
-  padding: 5rem;
+  width: 60%;
   z-index: 200;
   transition: 1.25s;
   background-color: #ecf0f3;
@@ -165,20 +158,15 @@
   height: 50rem;
   border-radius: 50%;
   background-color: #ecf0f3;
-  box-shadow: inset .8rem .8rem 1.2rem #d1d9e6, inset -.8rem -.8rem 1.2rem #f9f9f9;
+  box-shadow: inset 8px 8px 12px #d1d9e6, inset -8px -8px 12px #f9f9f9;
   bottom: -60%;
   left: -60%;
   transition: 1.25s;
 }
-
-.switch__description {
-  font-size: 1.5em;
-  text-align: center;
-}
 .switch__circle--t {
   top: -30%;
   left: 60%;
-  width: 50%;
+  width: 30rem;
   height: 30rem;
 }
 .switch__container {
@@ -187,15 +175,15 @@
   align-items: center;
   flex-direction: column;
   position: absolute;
-  width: 50%;
-  padding: 5rem 5.5rem;
+  margin-right: 4rem;
+  width: 60%;
   transition: 1.25s;
 }
 .switch__button {
   cursor: pointer;
 }
-.button:hover, .switch__button:hover {
-  box-shadow: .6rem .6rem 1rem var(--color-bt), -.6rem -.6rem 1rem var(--color-bt);
+.switch__button:hover {
+  box-shadow: 6px 6px 10px var(--color-bt), -6px -6px 10px var(--color-bt);
   transform: scale(0.985);
   transition: 0.25s;
 }
@@ -206,8 +194,8 @@
 }
 
 .is-txr {
-  left: calc(100% - 800px );
-  transition: 1.1s;
+  left: 50%;
+  transition: 1.25s;
   transform-origin: left;
 }
 
@@ -240,4 +228,82 @@
   30%, 50% {
     width: 500px;
   }
+}
+
+@media (max-width: 768px) {
+  .main {
+    width: 100%;
+    margin: 0;
+  } 
+
+  .container {
+    width: 50%;
+    padding: 0;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+  .form__span {
+    font-size: 1.2rem;
+  }
+
+  .form__input {
+    width: 15rem;
+  }
+
+  .button {
+    width: 15rem;
+  }
+ 
+  .switch {
+    width: 50%;
+  }
+
+  .a-container {
+    z-index: 100;
+    left: calc(100% - 400px );
+  }
+  
+  .b-container {
+    left: 50%
+    z-index: 0;
+  }
+}
+
+/* Media query for 375px screens */
+@media (max-width: 375px) {
+  .main {
+    width: 100%;
+    margin: 0;
+  } 
+
+  .container {
+    width: 50%;
+    padding: 0;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+  .form__span {
+    font-size: 1.2rem;
+  }
+
+  .form__input {
+    width: 15rem;
+  }
+
+  .button {
+    width: 15rem;
+  }
+ 
+  .switch {
+    width: 50%;
+  }
+  .a-container {
+    z-index: 100;
+    left: 50%
+  }
+
 }
