--- a/assets/CSS/componets/programas.css
+++ b/assets/CSS/componets/programas.css
@@ -3,25 +3,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100hv;
-}
+    width: 700px;
+} 
 .card{
-    position:relative;
-    width: 300px;
-    padding: 350px;
-}
+    position: relative;
+    width:  250px;
+    height: 380px;
+}   
 .card .face{
     position: absolute;
     width: 100%;
-    padding:100%;
+    padding: 100%;
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
     transition: .5s;
 }
 .card .front{
-    transform: perspective(600px) rotateY(0edg);
-    box-shadow: 0 5px 10px #000;
+    transform: perspective(600px)  rotateY(0deg);
+    box-shadow: 0 5px 10px ;
 }
 .card .front img{
     position: absolute;
@@ -32,29 +32,27 @@
 .card .front h2{
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100px;
     height: 45px;
     line-height: 45px;
     color: aliceblue;
     text-align: center;
 }
 .card .back{
-    transform: perspective(600px) rotateY(180edg);
-    background:aliceblue;
+    transform: perspective(600px)  rotateY(180deg);
     padding: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    box-shadow: 0 5px 10px #000;
+    justify-content:space-between;
 }
 .card .back p{
     letter-spacing: 1px;
 
 }
-.car:hover .front{
-    transform: perspective(600px) rotateY(180edg);
+.card:hover .front{
+    transform: perspective(600px)  rotateY(180deg);
 }
-.car:hover .back{
-    transform: perspective(600px) rotateY(360edg);
+
+.card:hover .back{
+    transform: perspective(600px)  rotateY(360deg);
 }
