feito: ajuste JS do carrinho e corrigidos bugs

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -25,3 +25,4 @@
 @import url('./componets/inscricao.css');
 @import url('./componets/loginMembros.css');
 @import url('./componets/carrinho.css');
+@import url('./componets/pagamentoCartao.css');
