--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -26,3 +26,4 @@
 @import url('./componets/loginMembros.css');
 @import url('./componets/carrinho.css');
 @import url('./componets/pagamentoCartao.css');
+@import url('./componets/pagamento.css');
