--- a/assets/CSS/componets/contato.css
+++ b/assets/CSS/componets/contato.css
@@ -1,3 +1,8 @@
+.main__contatc {
+  width: 100%;
+  padding-bottom: 2rem;
+}
+
 .herder .imgContact {
   width: 100%;
   height: 100%;
@@ -22,6 +27,7 @@
   margin-bottom: 1.875rem;
   font-size: 2.4rem;
   color: var(--color-sub);
+  line-height: 2.5rem;
 }
 
 .contactInfo__container {
@@ -55,12 +61,6 @@
   line-height: 3rem;
   font-size: 1.8rem;
   }
-
-.contactInfo__container span i {
-  color: var(--color-icon);
-  font-size: 1.5rem;
-  font-weight: 700;
-}
 
 .contactInfo span, .contactForm label, .contactForm input {
   display: block;
@@ -113,6 +113,10 @@
 
 .contactForm span {
   font-size: 1.2rem;
+}
+
+.contactForm__container #mensagem {
+  border-radius: 1.2rem;
 }
 
 .button {
