--- a/assets/CSS/componets/base.css
+++ b/assets/CSS/componets/base.css
@@ -31,6 +31,7 @@ main {
 
 h2 {
   font-size: 2rem;
+  height: 10rem;
   line-height: 1.6rem;
   color: var(--color-sub);
   border-bottom: .2rem solid var(--color-icon);
